--- a/PythonCode/main.ipynb
+++ b/PythonCode/main.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,18 +29,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def getColors(frame, threshb=127, threshg=127, threshr=127, maxVal=255):\n",
+    "def getColors(frame, threshb=127, threshg=100, threshr=127, maxVal=255):\n",
     "    b,g,r = cv2.split(frame)\n",
     "    \n",
     "    b = cv2.threshold(b, threshb, maxVal, cv2.THRESH_BINARY)[1]\n",
     "    g = cv2.threshold(g, threshg, maxVal, cv2.THRESH_BINARY)[1]\n",
     "    r = cv2.threshold(r, threshr, maxVal, cv2.THRESH_BINARY)[1]\n",
     "    \n",
-    "    b[np.where(r == 255) and np.where(g == 0)] = 0\n",
     "    \n",
     "    return cv2.merge((b,g,r))\n",
     "\n",
@@ -63,9 +62,378 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(0, 255, 0)\n",
+      "(0, 255, 0)\n",
+      "(0, 255, 0)\n",
+      "(0, 255, 0)\n",
+      "(0, 255, 0)\n",
+      "(0, 255, 0)\n",
+      "(0, 255, 0)\n",
+      "(255, 255, 255)\n",
+      "(255, 255, 255)\n",
+      "(0, 255, 0)\n",
+      "(255, 255, 255)\n",
+      "(255, 255, 255)\n",
+      "(255, 255, 0)\n",
+      "(255, 255, 255)\n",
+      "(0, 255, 255)\n",
+      "(0, 255, 255)\n",
+      "(0, 255, 255)\n",
+      "(0, 255, 255)\n",
+      "(0, 255, 255)\n",
+      "(0, 255, 255)\n",
+      "(0, 255, 255)\n",
+      "(0, 255, 255)\n",
+      "(0, 255, 255)\n",
+      "(0, 255, 255)\n",
+      "(0, 255, 255)\n",
+      "(0, 255, 255)\n",
+      "(0, 255, 255)\n",
+      "(0, 255, 255)\n",
+      "(0, 255, 255)\n",
+      "(0, 255, 255)\n",
+      "(0, 255, 255)\n",
+      "(0, 255, 255)\n",
+      "(0, 255, 255)\n",
+      "(0, 255, 255)\n",
+      "(0, 255, 255)\n",
+      "(0, 255, 255)\n",
+      "(255, 255, 255)\n",
+      "(255, 255, 255)\n",
+      "(255, 255, 255)\n",
+      "(255, 255, 255)\n",
+      "(255, 255, 255)\n",
+      "(255, 255, 255)\n",
+      "(255, 255, 255)\n",
+      "(255, 255, 255)\n",
+      "(255, 255, 255)\n",
+      "(255, 255, 255)\n",
+      "(255, 255, 255)\n",
+      "(255, 255, 255)\n",
+      "(255, 255, 255)\n",
+      "(255, 255, 255)\n",
+      "(255, 255, 255)\n",
+      "(255, 255, 255)\n",
+      "(255, 255, 255)\n",
+      "(255, 255, 255)\n",
+      "(0, 255, 255)\n",
+      "(0, 255, 255)\n",
+      "(0, 255, 255)\n",
+      "(0, 255, 255)\n",
+      "(0, 255, 255)\n",
+      "(0, 255, 255)\n",
+      "(0, 255, 255)\n",
+      "(0, 255, 255)\n",
+      "(0, 255, 255)\n",
+      "(0, 255, 255)\n",
+      "(0, 255, 255)\n",
+      "(0, 255, 255)\n",
+      "(0, 255, 255)\n",
+      "(0, 255, 255)\n",
+      "(0, 255, 255)\n",
+      "(0, 255, 255)\n",
+      "(0, 255, 255)\n",
+      "(0, 255, 255)\n",
+      "(0, 255, 255)\n",
+      "(0, 255, 255)\n",
+      "(0, 255, 255)\n",
+      "(0, 255, 255)\n",
+      "(0, 255, 255)\n",
+      "(0, 255, 255)\n",
+      "(0, 255, 255)\n",
+      "(0, 255, 255)\n",
+      "(0, 255, 255)\n",
+      "(0, 255, 255)\n",
+      "(0, 255, 255)\n",
+      "(0, 255, 255)\n",
+      "(0, 255, 255)\n",
+      "(0, 255, 255)\n",
+      "(0, 255, 255)\n",
+      "(0, 255, 255)\n",
+      "(0, 255, 255)\n",
+      "(255, 255, 0)\n",
+      "(255, 255, 0)\n",
+      "(255, 255, 255)\n",
+      "(0, 255, 0)\n",
+      "(0, 255, 0)\n",
+      "(0, 255, 0)\n",
+      "(0, 255, 0)\n",
+      "(0, 255, 0)\n",
+      "(0, 255, 0)\n",
+      "(0, 255, 0)\n",
+      "(0, 255, 0)\n",
+      "(0, 255, 0)\n",
+      "(0, 255, 0)\n",
+      "(0, 255, 0)\n",
+      "(0, 255, 0)\n",
+      "(0, 255, 0)\n",
+      "(0, 255, 0)\n",
+      "(0, 255, 0)\n",
+      "(0, 255, 0)\n",
+      "(0, 255, 0)\n",
+      "(0, 255, 0)\n",
+      "(0, 255, 0)\n",
+      "(0, 255, 0)\n",
+      "(0, 255, 0)\n",
+      "(0, 255, 0)\n",
+      "(0, 255, 0)\n",
+      "(0, 255, 0)\n",
+      "(0, 255, 0)\n",
+      "(0, 255, 0)\n",
+      "(0, 255, 0)\n",
+      "(0, 255, 0)\n",
+      "(0, 255, 0)\n",
+      "(0, 255, 0)\n",
+      "(0, 255, 0)\n",
+      "(0, 255, 0)\n",
+      "(0, 255, 0)\n",
+      "(0, 255, 0)\n",
+      "(0, 255, 0)\n",
+      "(0, 255, 0)\n",
+      "(0, 255, 0)\n",
+      "(0, 255, 0)\n",
+      "(0, 255, 0)\n",
+      "(0, 255, 0)\n",
+      "(0, 255, 0)\n",
+      "(0, 255, 0)\n",
+      "(0, 255, 0)\n",
+      "(0, 255, 0)\n",
+      "(0, 255, 0)\n",
+      "(0, 255, 0)\n",
+      "(0, 255, 0)\n",
+      "(0, 255, 0)\n",
+      "(0, 255, 0)\n",
+      "(0, 255, 0)\n",
+      "(0, 255, 0)\n",
+      "(0, 255, 0)\n",
+      "(0, 255, 0)\n",
+      "(0, 255, 0)\n",
+      "(0, 255, 0)\n",
+      "(0, 255, 0)\n",
+      "(0, 255, 0)\n",
+      "(0, 255, 0)\n",
+      "(0, 255, 0)\n",
+      "(0, 255, 0)\n",
+      "(0, 255, 0)\n",
+      "(0, 255, 0)\n",
+      "(0, 255, 0)\n",
+      "(0, 255, 0)\n",
+      "(0, 255, 0)\n",
+      "(0, 255, 0)\n",
+      "(0, 255, 0)\n",
+      "(0, 255, 0)\n",
+      "(0, 255, 0)\n",
+      "(0, 255, 0)\n",
+      "(0, 255, 0)\n",
+      "(0, 255, 0)\n",
+      "(0, 255, 0)\n",
+      "(0, 255, 0)\n",
+      "(0, 255, 0)\n",
+      "(0, 255, 0)\n",
+      "(0, 255, 0)\n",
+      "(0, 255, 0)\n",
+      "(0, 255, 0)\n",
+      "(0, 255, 0)\n",
+      "(0, 255, 0)\n",
+      "(0, 255, 0)\n",
+      "(0, 255, 0)\n",
+      "(0, 255, 0)\n",
+      "(0, 255, 0)\n",
+      "(0, 255, 0)\n",
+      "(0, 255, 0)\n",
+      "(0, 255, 0)\n",
+      "(0, 255, 0)\n",
+      "(0, 255, 0)\n",
+      "(0, 255, 0)\n",
+      "(0, 255, 0)\n",
+      "(0, 255, 0)\n",
+      "(0, 255, 0)\n",
+      "(0, 255, 0)\n",
+      "(0, 255, 0)\n",
+      "(0, 255, 0)\n",
+      "(0, 255, 0)\n",
+      "(0, 255, 0)\n",
+      "(0, 255, 0)\n",
+      "(0, 255, 0)\n",
+      "(0, 255, 0)\n",
+      "(0, 255, 0)\n",
+      "(0, 255, 0)\n",
+      "(0, 255, 0)\n",
+      "(0, 255, 0)\n",
+      "(0, 255, 0)\n",
+      "(0, 255, 0)\n",
+      "(0, 255, 0)\n",
+      "(0, 255, 0)\n",
+      "(0, 255, 0)\n",
+      "(0, 255, 0)\n",
+      "(0, 255, 0)\n",
+      "(0, 255, 0)\n",
+      "(0, 255, 0)\n",
+      "(0, 255, 0)\n",
+      "(0, 255, 0)\n",
+      "(0, 255, 0)\n",
+      "(0, 255, 0)\n",
+      "(0, 255, 0)\n",
+      "(0, 255, 0)\n",
+      "(0, 255, 0)\n",
+      "(0, 255, 0)\n",
+      "(0, 255, 0)\n",
+      "(0, 255, 0)\n",
+      "(0, 255, 0)\n",
+      "(0, 255, 0)\n",
+      "(0, 255, 0)\n",
+      "(0, 255, 0)\n",
+      "(0, 255, 0)\n",
+      "(0, 255, 0)\n",
+      "(0, 255, 0)\n",
+      "(0, 255, 0)\n",
+      "(0, 255, 0)\n",
+      "(0, 255, 0)\n",
+      "(0, 255, 0)\n",
+      "(0, 255, 0)\n",
+      "(0, 255, 0)\n",
+      "(0, 255, 0)\n",
+      "(0, 255, 0)\n",
+      "(0, 255, 0)\n",
+      "(0, 255, 0)\n",
+      "(0, 255, 0)\n",
+      "(0, 255, 0)\n",
+      "(0, 255, 0)\n",
+      "(0, 255, 0)\n",
+      "(0, 255, 0)\n",
+      "(0, 255, 0)\n",
+      "(0, 255, 0)\n",
+      "(0, 255, 0)\n",
+      "(0, 255, 0)\n",
+      "(0, 255, 0)\n",
+      "(0, 255, 0)\n",
+      "(0, 255, 0)\n",
+      "(0, 255, 0)\n",
+      "(0, 255, 0)\n",
+      "(0, 255, 0)\n",
+      "(0, 255, 0)\n",
+      "(255, 255, 255)\n",
+      "(255, 255, 0)\n",
+      "(255, 255, 0)\n",
+      "(255, 255, 255)\n",
+      "(255, 255, 255)\n",
+      "(255, 255, 255)\n",
+      "(255, 255, 255)\n",
+      "(255, 255, 255)\n",
+      "(255, 255, 255)\n",
+      "(255, 255, 255)\n",
+      "(255, 255, 255)\n",
+      "(255, 255, 255)\n",
+      "(255, 255, 255)\n",
+      "(255, 255, 255)\n",
+      "(255, 255, 255)\n",
+      "(255, 255, 255)\n",
+      "(255, 255, 255)\n",
+      "(255, 255, 255)\n",
+      "(255, 255, 255)\n",
+      "(255, 255, 255)\n",
+      "(255, 255, 255)\n",
+      "(255, 255, 255)\n",
+      "(255, 255, 255)\n",
+      "(255, 255, 255)\n",
+      "(255, 255, 255)\n",
+      "(255, 255, 255)\n",
+      "(255, 255, 255)\n",
+      "(255, 255, 255)\n",
+      "(255, 255, 255)\n",
+      "(255, 255, 255)\n",
+      "(255, 255, 255)\n",
+      "(255, 255, 255)\n",
+      "(255, 255, 255)\n",
+      "(255, 255, 255)\n",
+      "(255, 255, 255)\n",
+      "(255, 255, 255)\n",
+      "(255, 255, 255)\n",
+      "(255, 255, 255)\n",
+      "(255, 255, 255)\n",
+      "(255, 255, 255)\n",
+      "(255, 255, 255)\n",
+      "(255, 255, 255)\n",
+      "(255, 255, 255)\n",
+      "(255, 255, 255)\n",
+      "(255, 255, 255)\n",
+      "(255, 255, 255)\n",
+      "(255, 255, 255)\n",
+      "(255, 255, 255)\n",
+      "(255, 255, 255)\n",
+      "(255, 255, 255)\n",
+      "(255, 255, 255)\n",
+      "(255, 255, 255)\n",
+      "(255, 255, 255)\n",
+      "(255, 255, 255)\n",
+      "(255, 255, 255)\n",
+      "(255, 255, 255)\n",
+      "(255, 255, 255)\n",
+      "(255, 255, 255)\n",
+      "(255, 255, 255)\n",
+      "(255, 255, 0)\n",
+      "(255, 255, 0)\n",
+      "(255, 255, 255)\n",
+      "(255, 255, 255)\n",
+      "(255, 255, 255)\n",
+      "(255, 255, 255)\n",
+      "(255, 255, 255)\n",
+      "(255, 255, 255)\n",
+      "(255, 255, 255)\n",
+      "(255, 255, 255)\n",
+      "(255, 255, 255)\n",
+      "(255, 255, 255)\n",
+      "(255, 255, 255)\n",
+      "(255, 255, 255)\n",
+      "(255, 255, 255)\n",
+      "(255, 255, 255)\n",
+      "(255, 255, 255)\n",
+      "(255, 255, 255)\n",
+      "(255, 255, 255)\n",
+      "(255, 255, 255)\n",
+      "(255, 255, 255)\n",
+      "(255, 255, 255)\n",
+      "(255, 255, 255)\n",
+      "(255, 255, 255)\n",
+      "(255, 255, 255)\n",
+      "(255, 255, 255)\n",
+      "(255, 255, 255)\n",
+      "(255, 255, 255)\n",
+      "(255, 255, 255)\n",
+      "(255, 255, 255)\n",
+      "(255, 255, 255)\n",
+      "(255, 255, 255)\n",
+      "(255, 255, 255)\n",
+      "(255, 255, 255)\n",
+      "(255, 255, 255)\n",
+      "(255, 255, 255)\n",
+      "(255, 255, 255)\n",
+      "(255, 255, 255)\n",
+      "(255, 255, 255)\n",
+      "(255, 255, 255)\n",
+      "(255, 255, 255)\n",
+      "(255, 255, 255)\n",
+      "(255, 255, 255)\n",
+      "(255, 255, 255)\n",
+      "(255, 255, 255)\n",
+      "(0, 255, 0)\n",
+      "(0, 255, 0)\n",
+      "(0, 255, 0)\n",
+      "(0, 255, 0)\n",
+      "(0, 255, 0)\n",
+      "(0, 255, 0)\n",
+      "(0, 255, 0)\n",
+      "(0, 255, 0)\n"
+     ]
+    }
+   ],
    "source": [
     "while True:\n",
     "    ret, frame = camera.read()\n",
@@ -82,6 +450,8 @@
     "    cyp, cxp = getCenter(portion)\n",
     "    \n",
     "    cv2.rectangle(frame, (cx, cy), (cx, cy), (255,0,0), 4)\n",
+    "    \n",
+    "    print(bincount_app(colorFrame))\n",
     "    \n",
     "    cv2.imshow(\"color Frame\", colorFrame)\n",
     "    cv2.imshow(\"Frame\", frame)\n",
@@ -108,7 +478,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.2"
+   "version": "3.11.1"
   },
   "orig_nbformat": 4
  },
